--- a/6_House_Prices_RKR.Rmd
+++ b/6_House_Prices_RKR.Rmd
@@ -6,15 +6,15 @@ output: html_document
 ---
 
 ```{r include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE,message = FALSE,warning = FALSE)
 options(scipen=999)
 ```
 
-## House Price Growth
+# Denmark House Prices
 
 ```{r }
 library(pacman)
-pacman::p_load(tidyr,dplyr,ggplot2,boot,openxlsx,lubridate,forcats,broom,purrr,caret,glue,devtools,dkstat,httr,rvest)
+pacman::p_load(tidyr,dplyr,ggplot2,boot,openxlsx,lubridate,forcats,broom,purrr,caret,glue,devtools,dkstat,httr,rvest,zoo)
 source(file = "money_theme.R")
 ```
 
@@ -28,7 +28,7 @@ df =
   filter(!VALUE=="..") %>% 
   dplyr::mutate(VALUE=as.integer(VALUE)) %>% 
   dplyr::mutate(DATE=lubridate::ceiling_date(as.Date(as.yearqtr(DATE, format = "%YK%q")),"quarters")-days(1))
-df
+
 ```
 
 
@@ -40,7 +40,7 @@ growth = function(data,indices) {
 
 coefs = function(data) {
   ci_auc = tryCatch(expr = {
-    boot_ = boot(data=data,statistic=growth,R=10000)
+    boot_ = boot(data=data,statistic=growth,R=500)
     ci_ = boot.ci(boot_, type="bca")
     data.frame(t0=ci_$t0,
                         lwr=ci_$bca[4],
@@ -59,7 +59,9 @@ df_increase = df %>%
   arrange(desc(t0))
 ```
 
-# HOUSES
+## Increases Yearly Since 1992
+
+### Houses
 
 ```{r}
 
@@ -76,7 +78,7 @@ df_increase %>%
 
 ```
 
-# FLATS
+### Flats
 
 ```{r}
 
@@ -94,11 +96,13 @@ df_increase %>%
 ```
 
 
-# FLATS SINCE DECEMBER 2019
+## COVID-19 Increases
+
+### Houses
 
 ```{r}
 
-days = as.integer(ymd("2021-09-30") - ymd("2018-12-01"))
+days = as.integer( max(df$DATE) - ymd("2020-03-11"))
 
 growth = function(data,indices) {
   lm_ = lm(log(VALUE)~DATE,data=data[indices,])
@@ -107,7 +111,7 @@ growth = function(data,indices) {
 
 coefs_total = function(data) {
   ci_auc = tryCatch(expr = {
-    boot_ = boot(data=data,statistic=growth,R=10000)
+    boot_ = boot(data=data,statistic=growth,R=500)
     ci_ = boot.ci(boot_, type="bca")
     data.frame(t0=ci_$t0,
                         lwr=ci_$bca[4],
@@ -119,7 +123,52 @@ coefs_total = function(data) {
 }
 
 df_increase_dec_2019 = df %>% 
-  filter(DATE>=ymd("2018-12-01")) %>% 
+  filter(DATE>=ymd("2020-03-11")) %>% 
+  filter(PROPERTY_TYPE=="HOUSE") %>% 
+  filter(SALES_TYPE=="Realiseret handelspris") %>% 
+  filter(VALUE>0) %>% 
+  group_by(ZIP,PROPERTY_TYPE) %>% 
+  do(coefs_total(data = .)) %>% 
+  arrange(desc(t0)) %>%  
+  arrange(t0) %>% 
+  dplyr::mutate(ZIP=factor(ZIP,levels=.$ZIP)) 
+
+df_increase_dec_2019 %>% 
+  ggplot(.,aes(x=ZIP,y=t0)) +
+  geom_point() +
+  geom_errorbar(aes(ymin=lwr,ymax=upr)) +
+  scale_y_continuous(limits=c(0,30)) +
+  geom_text(aes(label=paste0(scales::number(t0,accuracy = 0.1)," [",scales::number(lwr,accuracy = 0.1)," ; ",scales::number(upr,accuracy = 0.1),"]"),hjust=1.3),size=3) +
+  coord_flip()
+
+```
+
+### Flats
+
+```{r}
+
+days = as.integer( max(df$DATE) - ymd("2020-03-11"))
+
+growth = function(data,indices) {
+  lm_ = lm(log(VALUE)~DATE,data=data[indices,])
+  return((((1+lm_$coefficients[2])^days)-1)*100)
+}
+
+coefs_total = function(data) {
+  ci_auc = tryCatch(expr = {
+    boot_ = boot(data=data,statistic=growth,R=500)
+    ci_ = boot.ci(boot_, type="bca")
+    data.frame(t0=ci_$t0,
+                        lwr=ci_$bca[4],
+                        upr=ci_$bca[5])
+  }, error= function(e) {
+    data.frame()
+  })
+  return(ci_auc)
+}
+
+df_increase_dec_2019 = df %>% 
+  filter(DATE>=ymd("2020-03-11")) %>% 
   filter(PROPERTY_TYPE=="FLAT") %>% 
   filter(SALES_TYPE=="Realiseret handelspris") %>% 
   filter(VALUE>0) %>% 
@@ -138,38 +187,8 @@ df_increase_dec_2019 %>%
   coord_flip()
 
 ```
-# ABSOLUTE TERMS
 
-```{r}
-
-df %>% 
-  filter(SALES_TYPE=="Realiseret handelspris") %>% 
-  filter(PROPERTY_TYPE=="HOUSE") %>% 
-  filter(VALUE>0) %>% 
-  group_by(ZIP) %>% 
-  filter(DATE==max(DATE)) %>% 
-  inner_join(df_increase) %>% 
-  dplyr::mutate(VALUE=VALUE*150) %>% 
-  dplyr:::mutate(increase_lwr=(-VALUE+(VALUE*((100+lwr)/100)^10))/(12*10),
-                 increase_t0=(-VALUE+(VALUE*((100+t0)/100)^10))/(12*10),
-                 increase_upr=(-VALUE+(VALUE*((100+upr)/100)^10))/(12*10)) %>% 
-  arrange(increase_t0) %>% 
-  dplyr::mutate(ZIP=factor(ZIP,levels=.$ZIP)) %>% 
-  dplyr::select(ZIP,PROPERTY_TYPE,increase_lwr:increase_upr) %>% 
-  # gather(STAT,VAL,increase_lwr:increase_upr) %>% 
-  ggplot(.,aes(x=ZIP,y=increase_t0)) +
-  geom_point() +
-  geom_errorbar(aes(ymin=increase_lwr,ymax=increase_upr)) +
-  coord_flip() +
-  scale_y_continuous(limits=c(0,250000))
-  
-
-
-
-```
-
-
-## MARS
+## MARS Model
 
 ```{r}
 
@@ -202,7 +221,7 @@ ggplot(df_mars,aes(x=DATE,y=pred)) +
 
 ```
 
-## Profit from waiting
+## Financial Crisis
 
 ```{r}
 df_finanskrise = 
@@ -230,9 +249,10 @@ df_finanskrise =
   dplyr::mutate(Pct_Chg=Min_M2_Price/Max_M2_Price) %>% 
   dplyr::mutate(Pct_Chg_Annualized=100*(Pct_Chg^(1/(Days/365.25))-1)) %>% 
   dplyr::mutate(Pct_Chg=100*(Pct_Chg-1))
-df_finanskrise
+
 ```
 
+### Losses by Zip Code
 
 ```{r}
 df_finanskrise %>% 
@@ -243,17 +263,7 @@ df_finanskrise %>%
 ```
 
 
-```{r}
-df_finanskrise %>% 
-  gather(date,val,Peak_Date,Trough_Date) %>% 
-  dplyr::mutate(val=as.Date(as.numeric(val),origin="1970-01-01")) %>% 
-  ggplot(.,aes(x=ZIP,y=val,group=ZIP)) +
-  geom_line() +
-  geom_point() +
-  coord_flip() +
-  scale_y_date(date_labels = "%Y",date_breaks = "1 year")
-```
-
+### Peak to Low
 
 ```{r}
 df_finanskrise %>% 
@@ -266,34 +276,9 @@ df_finanskrise %>%
   scale_y_date(date_labels = "%Y",date_breaks = "1 year")
 ```
 
-```{r}
-# Fall from right now
 
-current_max = max(df$DATE)
-df %>% 
-  filter(SALES_TYPE=="Realiseret handelspris") %>% 
-  filter(PROPERTY_TYPE=="HOUSE") %>% 
-  filter(VALUE>0) %>% 
-  group_by(ZIP) %>% 
-  filter(DATE==max(DATE)) %>% 
-  crossing(Length=seq(3)) %>% 
-  dplyr::select(DATE,ZIP,PROPERTY_TYPE,VALUE,Length) %>% 
-  inner_join(df_finanskrise %>% dplyr::select(ZIP,PROPERTY_TYPE,Pct_Chg_Annualized)) %>% 
-  dplyr::mutate(VALUE=VALUE*(1+(Pct_Chg_Annualized)/100)^Length) %>% 
-  dplyr::mutate(DATE=DATE+years(Length)) %>% 
-  dplyr::select(DATE,ZIP,PROPERTY_TYPE,VALUE) %>% 
-  bind_rows(df) %>% 
-  ggplot(.,aes(x=DATE,VALUE,color=ZIP)) +
-  geom_point(alpha=0.1) + 
-  geom_line() +
-  geom_vline(xintercept = current_max,linetype=2) +
-  theme(legend.position="bottom")
+### Simulated if crash reoccurred
 
-```
-
-
-  
-  
 ```{r}
 
 current_max = max(df$DATE)
@@ -322,39 +307,7 @@ df %>%
   scale_y_continuous(labels = scales::number,breaks = seq(0,10000000,1000000))
 ```
 
-```{r}
-
-current_max = max(df$Date)
-
-df %>% 
-  filter(SALES_TYPE=="Realiseret handelspris") %>% 
-  filter(PROPERTY_TYPE=="HOUSE") %>% 
-  filter(VALUE>0) %>% 
-  group_by(ZIP) %>% 
-  filter(DATE==max(DATE)) %>% 
-  crossing(Length=seq(3*12)) %>% 
-  dplyr::select(DATE,ZIP,PROPERTY_TYPE,VALUE,Length) %>% 
-  inner_join(df_finanskrise %>% dplyr::select(ZIP,PROPERTY_TYPE,Pct_Chg_Annualized)) %>% 
-  dplyr::mutate(VALUE=VALUE*((1+(Pct_Chg_Annualized)/100)^(1/12))^(Length)) %>% 
-  dplyr::mutate(DATE=DATE+months(Length)) %>% 
-  # dplyr::select(Date,Muni,Type,M2_Price) %>% 
-  bind_rows(df) %>% 
-  dplyr::mutate(VALUE=VALUE*150) %>% 
-  filter(DATE>=current_max) %>% 
-  group_by(ZIP) %>% 
-  arrange(ZIP,DATE) %>% 
-  dplyr::mutate(chg_from_max=VALUE-max(VALUE)) %>% 
-  dplyr::mutate(chg_from_max_monthly=chg_from_max/(Length)) %>% 
-  ggplot(.,aes(x=DATE,y=chg_from_max_monthly,color=ZIP)) +
-  geom_point() + 
-  geom_line() +
-  geom_vline(xintercept = current_max,linetype=2) +
-  theme(legend.position="bottom") +
-  scale_y_continuous(labels = scales::number,limits = c(-150000,0),breaks = seq(-150000,0,by=10000))
-```
-
-
-# Adjustments
+## Adjustments
 
 ```{r}
 
@@ -376,7 +329,7 @@ df %>%
 
 ```
 
-# LIGGE TIDER
+## Sales Times
 
 
 ```{r}
@@ -392,7 +345,7 @@ df_liggetider =
   gather(DATE,VALUE,c(4:ncol(.))) %>% 
   filter(!VALUE=="..") %>% 
   dplyr::mutate(DATE=lubridate::ceiling_date(ymd(glue("{substr(DATE,1,4)}-{substr(DATE,6,7)}-01")),unit="month")-days(1))
-df_liggetider
+
 ```
 
 ```{r}
@@ -400,12 +353,13 @@ df_liggetider
 df_liggetider %>% 
   ggplot(.,aes(x=DATE,y=VALUE,color=PROPERTY_TYPE)) +
   geom_smooth()+
-  scale_x_date(date_breaks = "2 year",date_labels = "%Y")
+  scale_x_date(date_breaks = "2 year",date_labels = "%Y") +
+  scale_y_continuous(limits = c(0,NA))
 
 ```
 
 
-# UDBUD
+## Supply
 
 ```{r}
 
@@ -421,7 +375,6 @@ df_udbud =
   gather(DATE,VALUE,c(4:ncol(.))) %>% 
   filter(!VALUE=="..") %>% 
   dplyr::mutate(DATE=lubridate::ceiling_date(ymd(glue("{substr(DATE,1,4)}-{substr(DATE,6,7)}-01")),unit="month")-days(1))
-df_udbud
 
 
 ```
@@ -437,9 +390,7 @@ df_udbud %>%
 
 
 
-# RSI
-
-## Renter
+## Insights into last peak
 
 ```{r}
 
@@ -461,8 +412,6 @@ df_interest = df_interest %>%
   dplyr::rename(DATE=Date)
 
 ```
-
-## Byggekonjunktur
 
 ```{r }
 BYGV80_meta <- dst_meta(table = "BYGV80", lang = "da")
@@ -486,21 +435,20 @@ df_BYGV80 =
 
 ```
 
-# Finansdanmark
 
 ```{r }
 
 df_m2price = 
   df %>% 
-  filter(ZIP=="2800 Kgs.Lyngby") %>% 
+  # filter(ZIP=="2800 Kgs.Lyngby") %>% 
   filter(SALES_TYPE=="Realiseret handelspris") %>% 
   dplyr::select(ZIP,DATE,SALES_TYPE,VALUE,PROPERTY_TYPE) %>% 
   dplyr::rename(STAT=SALES_TYPE)
 
 df_supply = 
   df_udbud %>% 
-  filter(ZIP=="Lyngby-Taarbæk") %>% 
-  dplyr::mutate(ZIP="2800 Kgs.Lyngby") %>% 
+  # filter(ZIP=="Lyngby-Taarbæk") %>% 
+  # dplyr::mutate(ZIP="2800 Kgs.Lyngby") %>% 
   dplyr::select(ZIP,DATE,SUPPLY_TYPE,VALUE,PROPERTY_TYPE) %>% 
   dplyr::rename(STAT=SUPPLY_TYPE) %>% 
   dplyr::mutate(PROPERTY_TYPE=gsub("Ejerlejlighed","FLAT",PROPERTY_TYPE)) %>% 
@@ -508,8 +456,8 @@ df_supply =
 
 df_wait = 
   df_liggetider %>% 
-  filter(ZIP=="Lyngby-Taarbæk") %>% 
-  dplyr::mutate(ZIP="2800 Kgs.Lyngby") %>% 
+  # filter(ZIP=="Lyngby-Taarbæk") %>% 
+  # dplyr::mutate(ZIP="2800 Kgs.Lyngby") %>% 
   dplyr::select(ZIP,DATE,TIME_TYPE,VALUE,PROPERTY_TYPE) %>% 
   dplyr::rename(STAT=TIME_TYPE) %>% 
   dplyr::mutate(PROPERTY_TYPE=gsub("Ejerlejlighed","FLAT",PROPERTY_TYPE)) %>% 
