--- a/9_ECB.Rmd
+++ b/9_ECB.Rmd
@@ -232,18 +232,24 @@ df_DK3MO = ecb::get_data(key = "FM.M.DK.DKK.DS.MM.CIBOR3M.ASKA")  %>%
                 dk_obsvalue=obsvalue/100) %>% 
     dplyr::select(Yield,obstime,dk_obsvalue)
 
-df_ECB_DK = 
+df_ECB_DK =
   df_ECB_yields %>% 
   filter(Yield %in% c("3M","10Y")) %>% 
   inner_join( bind_rows(df_DK10Y,df_DK3MO) ) %>% 
-  dplyr::mutate(spread=dk_obsvalue-obsvalue)
+  dplyr::mutate(spread=dk_obsvalue-obsvalue) %>% 
+  dplyr::select(-Yield_Numeric) %>% 
+  gather(stat,val,obsvalue:spread) %>% 
+  dplyr::mutate(stat=recode(stat,
+                            'obsvalue'='EU 3 Mo.',
+                            'spread'='DK-EU Spread',
+                            'dk_obsvalue'='DK Interbank 3 Mo.'))
 
 
 df_ECB_DK %>% 
-  ggplot(.,aes(x=obstime,y=spread,color=Yield)) +
+  ggplot(.,aes(x=obstime,y=val,color=stat)) +
   geom_line() +
   facet_wrap(~Yield) +
-  scale_y_continuous(labels = scales::percent) +
+  scale_y_continuous(labels = scales::percent,breaks = seq(-0.01,0.1,by=0.005)) +
   scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
   geom_hline(yintercept = 0,linetype=2) +
   theme_money_printer_go_brrr  +
