--- a/1_Fed_Yield_Curve.Rmd
+++ b/1_Fed_Yield_Curve.Rmd
@@ -64,7 +64,7 @@ df_yieldcurve =
   spread(series_id,value) %>% 
   arrange(desc(date)) %>% 
   tidyr::fill(c(2:ncol(.)),.direction="up") %>% 
-  na.omit() %>% 
+  # na.omit() %>% 
   # top_n(n=1,wt=date) %>% 
   gather(series_id,value,c(2:ncol(.))) %>% 
   ungroup() %>% 
@@ -81,6 +81,25 @@ df_yieldcurve =
 
 ```{r }
 df_yieldcurve %>% 
+  dplyr::mutate(value=value/100) %>% 
+  ggplot(.,aes(x=date,y=value)) +
+  geom_line(aes(group=series_id,color=series_id)) +
+  scale_x_date(date_breaks = "5 year",date_labels = "%Y") +
+  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.025)) + 
+  theme_money_printer_go_brrr +
+  labs(title="All Yields",
+       x="Date",
+       y="Spread (%)",
+       caption = timestamp_caption())
+```
+
+
+## Since 2001
+
+```{r }
+
+df_yieldcurve %>% 
+  filter(date>ymd("2001-01-01")) %>% 
   dplyr::mutate(value=value/100) %>% 
   ggplot(.,aes(x=date,y=value)) +
   geom_line(aes(group=series_id,color=series_id)) +
@@ -137,40 +156,24 @@ df_yieldcurve %>%
   geom_point() +
   geom_line() +
   scale_x_continuous(labels = c('FEDFUNDS','DGS1MO','DGS3MO','DGS6MO','DGS1','DGS2','DGS3','DGS5','DGS7','DGS10','DGS20','DGS30'),breaks = c(0,1,3,6,12,24,36,60,84,120,240,360)) +
-  scale_y_continuous(limits=c(0,NA),expand=c(0,0),breaks = seq(0,10,by=0.25))+
-  theme_bw() + 
-  theme(axis.text.x=element_text(angle=45,hjust=1,size=8))
+  scale_y_continuous(limits=c(0,NA),expand=c(0,0),breaks = seq(0,10,by=0.25))  + 
+  geom_text(aes(label=paste0(value,"%")),vjust=-1,size=3) +
+  theme_money_printer_go_brrr +
+  labs(title="US Treasury Yield Curve",
+       x="Bond",
+       y="Yield (%)",
+       caption = timestamp_caption())
 
 ```
 
 ## Treasury Bonds Spreads
-
-### 30-Year Mortgage to 30-Year T-Bond
-
-```{r }
-
-df_yieldcurve %>% 
-  filter(series_id %in% c("MORTGAGE30US","DGS30")) %>% 
-  spread(series_id,value) %>% 
-  dplyr::mutate(spread=(MORTGAGE30US-DGS30)/100) %>% 
-  ggplot(.,aes(x=date,y=spread)) +
-  geom_line() +
-  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
-  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.0025)) +
-  geom_hline(yintercept = 0,linetype=2) +
-  theme_money_printer_go_brrr +
-  theme(legend.position="bottom") +
-  labs(title="Spread: Mortgage30US - DGS30",
-       x="Date",
-       y="Spread (%)",
-       caption = timestamp_caption())
-```
 
 ### 2-Year to 10-Year T-Bond
 
 ```{r }
 
 df_yieldcurve %>% 
+  filter(date>ymd("1975-01-01")) %>% 
   dplyr::select(-time) %>% 
   filter(series_id %in% c("DGS10","DGS2")) %>% 
   spread(series_id,value) %>% 
@@ -178,7 +181,7 @@ df_yieldcurve %>%
   ggplot(.,aes(x=date,y=spread)) +
   geom_line() +
   geom_hline(yintercept = 0,linetype=2) + 
-  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  scale_x_date(date_breaks = "2 year",date_labels = "%Y") +
   scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.0025)) + 
   theme_money_printer_go_brrr +
   labs(title="Spread: DGS2 - DGS10",
@@ -187,26 +190,95 @@ df_yieldcurve %>%
        caption = timestamp_caption())
 ```
 
-### 6-Month to 30-Year Mortgage Spread
 
 ```{r }
 
 df_yieldcurve %>% 
+  filter(date>Sys.Date()-years(1)) %>% 
   dplyr::select(-time) %>% 
-  filter(series_id %in% c("MORTGAGE30US","DGS6MO")) %>% 
+  filter(series_id %in% c("DGS10","DGS2")) %>% 
   spread(series_id,value) %>% 
-  dplyr::mutate(spread=(MORTGAGE30US-DGS6MO)/100) %>% 
+  dplyr::mutate(spread=(DGS10-DGS2)/100) %>% 
   ggplot(.,aes(x=date,y=spread)) +
   geom_line() +
   geom_hline(yintercept = 0,linetype=2) + 
-  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
-  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.005)) + 
+  scale_x_date(date_breaks = "1 month",date_labels = "%b") +
+  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.0025)) + 
   theme_money_printer_go_brrr +
-  labs(title="Spread: MORTGAGE30US - DGS6MO",
+  labs(title="Spread: DGS2 - DGS10",
        x="Date",
        y="Spread (%)",
        caption = timestamp_caption())
 ```
+
+
+### Federal Funds Rate to 30-Year Mortgage Spread
+
+```{r }
+
+df_yieldcurve %>% 
+  filter(date>ymd("1970-01-01")) %>% 
+  dplyr::select(-time) %>% 
+  filter(series_id %in% c("MORTGAGE30US","DFF")) %>% 
+  spread(series_id,value) %>% 
+  dplyr::mutate(spread=(MORTGAGE30US-DFF)/100) %>% 
+  ggplot(.,aes(x=date,y=spread)) +
+  geom_line() +
+  geom_hline(yintercept = 0,linetype=2) + 
+  geom_hline(yintercept = 0.055,color="red") +
+  scale_x_date(date_breaks = "2 year",date_labels = "%Y") +
+  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.01)) + 
+  theme_money_printer_go_brrr +
+  labs(title="Spread: MORTGAGE30US - DFF",
+       x="Date",
+       y="Spread (%)",
+       caption = timestamp_caption())
+```
+
+```{r }
+
+df_yieldcurve %>% 
+  filter(date>Sys.Date()-years(1)) %>% 
+  dplyr::select(-time) %>% 
+  filter(series_id %in% c("MORTGAGE30US","DFF")) %>% 
+  spread(series_id,value) %>% 
+  dplyr::mutate(spread=(MORTGAGE30US-DFF)/100) %>% 
+  ggplot(.,aes(x=date,y=spread)) +
+  geom_line() +
+  geom_hline(yintercept = 0,linetype=2) + 
+  geom_hline(yintercept = 0.055,color="red") +
+  scale_x_date(date_breaks = "1 month",date_labels = "%b") +
+  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.005)) + 
+  theme_money_printer_go_brrr +
+  labs(title="Spread: MORTGAGE30US - DFF",
+       x="Date",
+       y="Spread (%)",
+       caption = timestamp_caption())
+```
+### 30-Year Mortgage to 30-Year T-Bond
+
+```{r }
+
+df_yieldcurve %>% 
+  filter(date>ymd("1975-01-01")) %>% 
+  filter(series_id %in% c("MORTGAGE30US","DGS30")) %>% 
+  spread(series_id,value) %>% 
+  dplyr::mutate(spread=(MORTGAGE30US-DGS30)/100) %>% 
+  ggplot(.,aes(x=date,y=spread)) +
+  geom_line() +
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.005)) +
+  geom_hline(yintercept = 0,linetype=2) +
+  geom_hline(yintercept = 0.025,color="red") +
+  theme_money_printer_go_brrr +
+  theme(legend.position="bottom") +
+  labs(title="Spread: Mortgage30US - DGS30",
+       x="Date",
+       y="Spread (%)",
+       caption = timestamp_caption())
+```
+
+
 
 ## Yield Checkboard
 
@@ -232,13 +304,16 @@ df_yield_checkboard %>%
   ggplot(.,aes(x=series_id,y=joined_series)) +
   geom_tile(aes(fill=spread)) +
   scale_fill_gradient2(low="green",high="red",midpoint=0,na.value = "gray70") +
-  theme(axis.text.x=element_text(angle=45,hjust=1),
-        legend.position="bottom")+
-  geom_text(aes(label=scales::number(label,accuracy = 0.01,prefix = NULL)),size=3.5)
+  geom_text(aes(label=scales::number(label,accuracy = 0.01,prefix = NULL)),size=3.5)+ 
+  theme_money_printer_go_brrr +
+  labs(title="US T-Bond Spreads Checkboard",
+       x=NULL,
+       y="NULL",
+       caption = timestamp_caption())
 ```
 
 
-```{r }
+```{r eval=F }
 df_yield_checkboard %>% 
   filter(date>ymd("20-01-01")) %>% 
   ggplot(.,aes(x=series_id,y=joined_series)) +
@@ -323,6 +398,12 @@ df_yield_checkboard %>%
   scale_x_date(expand=c(0.4,0)) +
   geom_text(aes(label=label),hjust=-0.1,size=3) +
   geom_hline(yintercept = 0,linetype=2) +
-  geom_vline(xintercept = Sys.Date())
+  geom_vline(xintercept = Sys.Date())+ 
+  theme_money_printer_go_brrr +
+  theme(legend.position="null") +
+  labs(title="US T-Bond Spread Over Time",
+       x="Date",
+       y="Spread (%)",
+       caption = timestamp_caption())
   
 ```
