--- a/1_Fed_Yield_Curve.Rmd
+++ b/1_Fed_Yield_Curve.Rmd
@@ -5,6 +5,13 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
+<style type="text/css">
+.main-container {
+  max-width: 100% !important;
+  margin: auto;
+}
+</style>
+
 ```{r  include=FALSE}
 knitr::opts_chunk$set(echo = FALSE,message = FALSE,warning = FALSE)
 ```
@@ -170,7 +177,7 @@ df_yieldcurve %>%
 
 ### 2-Year to 10-Year T-Bond
 
-```{r }
+```{r fig.width = 1024/72, fig.width = 768/72, dpi=72, fig.retina=1, dev.args = list(type = 'cairo-png') }
 
 df_yieldcurve %>% 
   filter(date>ymd("1975-01-01")) %>% 
@@ -191,7 +198,7 @@ df_yieldcurve %>%
 ```
 
 
-```{r }
+```{r fig.width = 1024/72, fig.width = 768/72, dpi=72, fig.retina=1, dev.args = list(type = 'cairo-png') }
 
 df_yieldcurve %>% 
   filter(date>Sys.Date()-years(1)) %>% 
@@ -214,7 +221,7 @@ df_yieldcurve %>%
 
 ### Federal Funds Rate to 30-Year Mortgage Spread
 
-```{r }
+```{r fig.width = 1024/72, fig.width = 768/72, dpi=72, fig.retina=1, dev.args = list(type = 'cairo-png') }
 
 df_yieldcurve %>% 
   filter(date>ymd("1970-01-01")) %>% 
@@ -235,7 +242,7 @@ df_yieldcurve %>%
        caption = timestamp_caption())
 ```
 
-```{r }
+```{r fig.width = 1024/72, fig.width = 768/72, dpi=72, fig.retina=1, dev.args = list(type = 'cairo-png') }
 
 df_yieldcurve %>% 
   filter(date>Sys.Date()-years(1)) %>% 
@@ -257,7 +264,7 @@ df_yieldcurve %>%
 ```
 ### 30-Year Mortgage to 30-Year T-Bond
 
-```{r }
+```{r fig.width = 1024/72, fig.width = 768/72, dpi=72, fig.retina=1, dev.args = list(type = 'cairo-png') }
 
 df_yieldcurve %>% 
   filter(date>ymd("1975-01-01")) %>% 
@@ -295,7 +302,10 @@ df_yield_checkboard =
   dplyr::select(series_id,joined_series,date,spread,label) %>% 
   dplyr::mutate(series_id=factor(series_id,levels=order_),
                 joined_series=factor(joined_series,levels=order_))
+```
 
+
+```{r fig.width = 1024/72, fig.width = 768/72, dpi=72, fig.retina=1, dev.args = list(type = 'cairo-png') }
 df_yield_checkboard %>% 
   group_by(series_id,joined_series) %>% 
   filter(date==max(date)) %>% 
@@ -328,7 +338,7 @@ df_yield_checkboard %>%
 ```
 
 
-```{r }
+```{r fig.width = 1024/72, fig.width = 768/72, dpi=72, fig.retina=1, dev.args = list(type = 'cairo-png') }
 
 df_yield_checkboard %>% 
   dplyr::mutate(series_id=as.integer(paste0(recode(series_id,
