--- a/3_Predict_US_Interest_Rates.Rmd
+++ b/3_Predict_US_Interest_Rates.Rmd
@@ -6,14 +6,14 @@ output: html_document
 ---
 
 ```{r  include=FALSE}
-knitr::opts_chunk$set(echo = FALSE,message = FALSE,warning = FALSE)
+knitr::opts_chunk$set(echo = FALSE,message = FALSE,warning = FALSE,dev = "svg")
 ```
 
 # Predict US Interest Rates
 
 ```{r}
 library(pacman)
-pacman::p_load(fredr,dplyr,tidyr,lubridate,caret,partykit,pROC,gganimate,devtools,httr,rvest)
+pacman::p_load(fredr,dplyr,tidyr,lubridate,caret,partykit,pROC,gganimate,devtools,httr,rvest,data.table)
 source(file = "money_theme.R")
 ```
 
@@ -318,7 +318,7 @@ fit_DK_Long = caret::train(x = df_predict_DK_Long %>%
 
 ## Danish Short and Long
 
-```{r}
+```{r fig.width=20,fig.height=20}
 
 df_predict_DK_Short %>% 
   # filter(date>=Sys.Date()-years(2)) %>% 
@@ -354,11 +354,12 @@ df_predict_DK_Short %>%
   filter(!is.na(date)) %>% 
   dplyr::mutate(date=as.Date(date,origin="1970-01-01")),aes(x=date,y=value))  +
   scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  scale_y_continuous(breaks = seq(0,10,0.5)) +
   theme(axis.text.x=element_text(angle=45,hjust=1))  +
   geom_vline(xintercept = Sys.Date(),linetype=2) +
   geom_hline(yintercept = 0,linetype=2) +
   facet_wrap(~one_year,scales="free",ncol=1) +
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Predicted/Observed Long and Short Interest Rate",
        x=NULL,
        y="(%)",
@@ -368,8 +369,7 @@ df_predict_DK_Short %>%
 
 ## Predicted Yield
 
-```{r}
-
+```{r fig.width=20,fig.height=20}
 
 df_predict_DFF %>% 
   dplyr::mutate(pred_DFF=predict(fit_DFF,.),
@@ -388,11 +388,12 @@ df_predict_DFF %>%
   ggplot(.,aes(x=date,y=val,color=pred)) +
   geom_line() +
   scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  scale_y_continuous(breaks = seq(0,10,0.5)) +
   theme(axis.text.x=element_text(angle=45,hjust=1)) +
   geom_vline(xintercept = Sys.Date(),linetype=2) +
   geom_hline(yintercept = 0,linetype=2) +
   facet_wrap(~one_year,scales="free",ncol=1) +
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Predicted/Observed T-Bond Yields",
        x=NULL,
        y="(%)",
@@ -403,7 +404,7 @@ df_predict_DFF %>%
 ## Future Yield Curves
 
 
-```{r}
+```{r fig.width=20,fig.height=20}
 
 
 df_predict_DFF %>% 
@@ -424,7 +425,8 @@ df_predict_DFF %>%
                                           "pred_MORTGAGE30US"))) %>% 
   ggplot(.,aes(x=pred,y=val,color=factor(date),group=date)) +
   geom_line() +
-  theme_money_printer_go_brrr +
+  scale_y_continuous(breaks = seq(0,10,0.5)) +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Predicted Yield Curves",
        x=NULL,
        y="(%)",
@@ -434,8 +436,7 @@ df_predict_DFF %>%
 
 ## Future FED FOMC Meeting Rate changes
 
-```{r}
-
+```{r fig.width=20,fig.height=20}
 
 fomc_dates = data.frame(date_fomc=c(ymd("2022-05-04"),
                ymd("2022-06-15"),
@@ -443,7 +444,9 @@ fomc_dates = data.frame(date_fomc=c(ymd("2022-05-04"),
                ymd("2022-09-21"),
                ymd("2022-11-02"),
                ymd("2022-12-14"),
-               ymd("2023-02-01")))
+               ymd("2023-02-01"),
+               Sys.Date())) %>% 
+  filter(date_fomc>=Sys.Date())
 
 
 df_predict_DFF %>% 
@@ -457,7 +460,7 @@ df_predict_DFF %>%
   gather(pred,val,pred_DFF:pred_MORTGAGE30US) %>%
   filter(!is.na(date)) %>% 
   dplyr::mutate(date=as.Date(date,origin="1970-01-01")) %>% 
-  crossing(fomc_dates) %>% 
+  tidyr::crossing(fomc_dates) %>% 
   group_by( date_fomc ) %>% 
   filter(date-date_fomc>=0) %>% 
   filter(date-date_fomc==min(date-date_fomc)) %>% 
@@ -469,12 +472,68 @@ df_predict_DFF %>%
   scale_y_continuous(breaks = seq(0,0.1,by=0.0025),labels = scales::percent,limits = c(0,NA)) +
   scale_x_date(date_breaks = "1 month",date_labels = "%b") +
   geom_vline(data=fomc_dates,aes(xintercept=date_fomc),linetype=2) +
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Predicted FOMC Meeting Rates",
        x=NULL,
        y="(%)",
        caption = timestamp_caption())
 
                 
+```
+
+
+
+```{r}
+
+fit_DFF_previous = rbindlist(lapply(c(7,30,180,365),function(days_ago) {
+  
+  temp_df =df_predict_DFF %>% 
+    filter(date<=Sys.Date()-days(days_ago))
+  
+  temp_fit = caret::train(x = temp_df %>% 
+                              na.omit %>% 
+                              dplyr::select(-date,-value) %>% 
+                              data.frame(),
+                         y = temp_df %>% 
+                           na.omit %>% 
+                           .[["value"]],
+                         method = "rf",
+                         tuneGrid=tune_grid,
+                         ntree=num_trees,
+                         metric = "RMSE",
+                         trControl=train_control)
+  
+  df_predict_DFF %>% 
+    dplyr::mutate(pred_DFF=predict(temp_fit,.)) %>% 
+    dplyr::select(date,pred_DFF) %>% 
+    dplyr::mutate(date=date+years(1),
+                  days_ago=days_ago,) %>%
+    gather(pred,val,pred_DFF) 
+  
+}))
+
+fit_DFF_previous %>% 
+  filter(!is.na(date)) %>% 
+  dplyr::mutate(date=as.Date(date,origin="1970-01-01"),
+                days_ago=factor(days_ago)) %>% 
+  tidyr::crossing(fomc_dates) %>% 
+  group_by( date_fomc ) %>% 
+  filter(date-date_fomc>=0) %>% 
+  filter(date-date_fomc==min(date-date_fomc)) %>% 
+  filter(pred=="pred_DFF") %>% 
+  dplyr::mutate(val=ceiling(val/0.25)*0.25/100) %>% 
+  ggplot(.,aes(x=date_fomc,y=val,color=days_ago)) +
+  geom_point() + 
+  geom_line() +
+  scale_y_continuous(breaks = seq(0,0.1,by=0.0025),labels = scales::percent,limits = c(0,NA)) +
+  scale_x_date(date_breaks = "1 month",date_labels = "%b") +
+  geom_vline(data=fomc_dates,aes(xintercept=date_fomc),linetype=2) +
+  theme_money_printer_go_brrr(base_size=12) +
+  labs(title="Predicted FOMC Meeting Rates",
+       x=NULL,
+       y="(%)",
+       caption = timestamp_caption())
+
+
 ```
 
