--- a/10_Boligbyrde.Rmd
+++ b/10_Boligbyrde.Rmd
@@ -77,7 +77,7 @@ df_m2price %>%
   facet_wrap(~RATE_TYPE,ncol=1) +
   scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
   geom_hline(yintercept = 0,linetype=2) +
-  theme_money_printer_go_brrr  +
+  theme_money_printer_go_brrr(base_size=12)  +
   labs(title="Boligbyrde: DK Interest Payment per SQMT",
        x="Date",
        y="DKK",
@@ -103,7 +103,7 @@ df_m2price %>%
   facet_wrap(~RATE_TYPE,ncol=1) +
   scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
   geom_hline(yintercept = 0,linetype=2) +
-  theme_money_printer_go_brrr  +
+  theme_money_printer_go_brrr(base_size=12)  +
   labs(title="Boligbyrde: DK Interest Payment per SQMT",
        x="Date",
        y="DKK",
