--- a/1_Fed_Yield_Curve.Rmd
+++ b/1_Fed_Yield_Curve.Rmd
@@ -93,7 +93,7 @@ df_yieldcurve %>%
   geom_line(aes(group=series_id,color=series_id)) +
   scale_x_date(date_breaks = "5 year",date_labels = "%Y") +
   scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.025)) + 
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="All Yields",
        x="Date",
        y="Spread (%)",
@@ -112,7 +112,7 @@ df_yieldcurve %>%
   geom_line(aes(group=series_id,color=series_id)) +
   scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
   scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.005)) + 
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="All Yields",
        x="Date",
        y="Spread (%)",
@@ -131,7 +131,7 @@ df_yieldcurve %>%
   theme(legend.position="bottom") +
   scale_x_date(date_breaks = "1 months",date_labels = "%Y %b") +
   scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.005)) + 
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="All Yields (Last Year)",
        x="Date",
        y="Spread (%)",
@@ -165,7 +165,7 @@ df_yieldcurve %>%
   scale_x_continuous(labels = c('FEDFUNDS','DGS1MO','DGS3MO','DGS6MO','DGS1','DGS2','DGS3','DGS5','DGS7','DGS10','DGS20','DGS30'),breaks = c(0,1,3,6,12,24,36,60,84,120,240,360)) +
   scale_y_continuous(limits=c(0,NA),expand=c(0,0),breaks = seq(0,10,by=0.25))  + 
   geom_text(aes(label=paste0(value,"%")),vjust=-1,size=3) +
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="US Treasury Yield Curve",
        x="Bond",
        y="Yield (%)",
@@ -190,7 +190,7 @@ df_yieldcurve %>%
   geom_hline(yintercept = 0,linetype=2) + 
   scale_x_date(date_breaks = "2 year",date_labels = "%Y") +
   scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.0025)) + 
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Spread: DGS2 - DGS10",
        x="Date",
        y="Spread (%)",
@@ -211,7 +211,7 @@ df_yieldcurve %>%
   geom_hline(yintercept = 0,linetype=2) + 
   scale_x_date(date_breaks = "1 month",date_labels = "%b") +
   scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.0025)) + 
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Spread: DGS2 - DGS10",
        x="Date",
        y="Spread (%)",
@@ -235,7 +235,7 @@ df_yieldcurve %>%
   geom_hline(yintercept = 0.055,color="red") +
   scale_x_date(date_breaks = "2 year",date_labels = "%Y") +
   scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.01)) + 
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Spread: MORTGAGE30US - DFF",
        x="Date",
        y="Spread (%)",
@@ -256,7 +256,7 @@ df_yieldcurve %>%
   geom_hline(yintercept = 0.055,color="red") +
   scale_x_date(date_breaks = "1 month",date_labels = "%b") +
   scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.005)) + 
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Spread: MORTGAGE30US - DFF",
        x="Date",
        y="Spread (%)",
@@ -278,7 +278,7 @@ df_yieldcurve %>%
   scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.005)) +
   geom_hline(yintercept = 0,linetype=2) +
   geom_hline(yintercept = 0.025,color="red") +
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   theme(legend.position="bottom") +
   labs(title="Spread: Mortgage30US - DGS30",
        x="Date",
@@ -316,7 +316,7 @@ df_yield_checkboard %>%
   geom_tile(aes(fill=spread)) +
   scale_fill_gradient2(low="green",high="red",midpoint=0,na.value = "gray70") +
   geom_text(aes(label=scales::number(label,accuracy = 0.01,prefix = NULL)),size=3.5)+ 
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="US T-Bond Spreads Checkboard",
        x=NULL,
        y="NULL",
@@ -410,7 +410,7 @@ df_yield_checkboard %>%
   geom_text(aes(label=label),hjust=-0.1,size=3) +
   geom_hline(yintercept = 0,linetype=2) +
   geom_vline(xintercept = Sys.Date())+ 
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   theme(legend.position="null") +
   labs(title="US T-Bond Spread Over Time",
        x="Date",
