--- a/4_Byggekonjunktur.Rmd
+++ b/4_Byggekonjunktur.Rmd
@@ -53,7 +53,7 @@ BYGV80 %>%
   geom_hline(yintercept = 0) +
   geom_vline(xintercept = c(ymd("2005-04-01","2021-01-01"))) +
   geom_vline(xintercept = c(ymd("2006-06-01")),linetype=3) +
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Denmark: Flats Construction",
        x=NULL,
        y="(SD)",
@@ -77,7 +77,7 @@ BYGV80 %>%
   geom_hline(yintercept = 0) +
   geom_vline(xintercept = c(ymd("2005-04-01","2021-01-01"))) +
   geom_vline(xintercept = c(ymd("2006-06-01")),linetype=3) +
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Denmark: Houses Construction",
        x=NULL,
        y="(SD)",
@@ -114,7 +114,7 @@ BYGV80 %>%
   geom_line() +
   facet_wrap(~BYGFASE,scales = "free",ncol=1) +
   geom_hline(yintercept = 0) +
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Denmark: Rolling Sum of Changes",
        x=NULL,
        y=NULL,
@@ -142,7 +142,7 @@ BYGV80 %>%
   geom_smooth(span=0.25) +
   theme(legend.position = "bottom") +
   geom_hline(yintercept = 0,linetype=2) +
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Denmark: Backlog of Construction (Permits % Completed)",
        x=NULL,
        y="(SD)",
@@ -168,7 +168,7 @@ BYGV80 %>%
   labs(title="Backlog: 'Byggeri under opførelse' - 'Fuldført Byggeri'") +
   scale_x_date(date_breaks = "2 years",date_labels = "%Y") +
   geom_hline(yintercept = 0,linetype=2)  +
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Denmark: Backlog of Construction (Started % Completed)",
        x=NULL,
        y="(SD)",
@@ -200,7 +200,7 @@ BYG1 %>%
   geom_smooth(span=0.17) +
   theme(legend.position = "bottom") +
   geom_hline(yintercept = 0,linetype=2)  +
-  theme_money_printer_go_brrr +
+  theme_money_printer_go_brrr(base_size=12) +
   labs(title="Denmark: Construction Employment",
        x=NULL,
        y="(SD)",
