--- a/2_Obligationsrenter.Rmd
+++ b/2_Obligationsrenter.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
-```{r include=FALSE}
+```{r obligationsrenter,include=FALSE}
 knitr::opts_chunk$set(echo = FALSE,message = FALSE,warning = FALSE)
 ```
 
