--- a/3_Predict_US_Interest_Rates.Rmd
+++ b/3_Predict_US_Interest_Rates.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
-```{r  include=FALSE}
+```{r  predict_us_interest_rates,include=FALSE}
 knitr::opts_chunk$set(echo = FALSE,message = FALSE,warning = FALSE,dev = "svg")
 ```
 
