--- a/6_House_Prices_RKR.Rmd
+++ b/6_House_Prices_RKR.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
-```{r include=FALSE}
+```{r housepricesrkr,include=FALSE}
 knitr::opts_chunk$set(echo = FALSE,message = FALSE,warning = FALSE)
 options(scipen=999)
 ```
