--- a/7_BoligerCPR.Rmd
+++ b/7_BoligerCPR.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
-```{r include=FALSE}
+```{r boligercpr,include=FALSE}
 knitr::opts_chunk$set(echo = FALSE,message = FALSE,warning = FALSE)
 library(pacman)
 pacman::p_load(devtools,dkstat,zoo,dplyr,tidyr,ggplot2,lubridate)
