--- a/packages.bib
+++ b/packages.bib
@@ -3,23 +3,31 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2021},
+  year = {2022},
   url = {https://www.R-project.org/},
 }
 
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
-  year = {2021},
-  note = {R package version 0.24},
+  year = {2022},
+  note = {R package version 0.26},
   url = {https://CRAN.R-project.org/package=bookdown},
+}
+
+@Manual{R-fredr,
+  title = {fredr: An R Client for the FRED API},
+  author = {Sam Boysel and Davis Vaughan},
+  year = {2021},
+  note = {R package version 2.1.0},
+  url = {https://github.com/sboysel/fredr},
 }
 
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2021},
-  note = {R package version 1.37},
+  year = {2022},
+  note = {R package version 1.39},
   url = {https://yihui.org/knitr/},
 }
 
@@ -31,19 +39,27 @@
   url = {https://CRAN.R-project.org/package=lubridate},
 }
 
+@Manual{R-pacman,
+  title = {pacman: Package Management Tool},
+  author = {Tyler Rinker and Dason Kurkiewicz},
+  year = {2019},
+  note = {R package version 0.5.1},
+  url = {https://github.com/trinker/pacman},
+}
+
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2021},
-  note = {R package version 2.11},
+  year = {2022},
+  note = {R package version 2.14},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
 @Manual{R-scales,
   title = {scales: Scale Functions for Visualization},
   author = {Hadley Wickham and Dana Seidel},
-  year = {2020},
-  note = {R package version 1.1.1},
+  year = {2022},
+  note = {R package version 1.2.0},
   url = {https://CRAN.R-project.org/package=scales},
 }
 
@@ -88,6 +104,15 @@
   number = {3},
   pages = {1--25},
   url = {https://www.jstatsoft.org/v40/i03/},
+}
+
+@Manual{pacman2018,
+  title = {{pacman}: {P}ackage Management for {R}},
+  author = {Tyler W. Rinker and Dason Kurkiewicz},
+  address = {Buffalo, New York},
+  note = {version 0.5.0},
+  year = {2018},
+  url = {http://github.com/trinker/pacman},
 }
 
 @Book{rmarkdown2018,
